# text-normalize

./: readme.md  stack.yaml  text-normalize.cabal
examples/01/: LICENSE  text-normalize-example01.cabal
examples/01/src/: Main.hs
src/Data/Text/: Histogramm.hs  Normalize.hs
src/Data/Text/Normalize/: Chunk.hs  Lexeme.hs  Sentence.hs  Stem.hs  StopWord.hs  Token.hs
test/Data/Text/: HistogrammSpec.hs  NormalizeSpec.hs
