name:                text-normalize-example01
version:             0.1.0.0
license:             MIT
copyright:           2017 Hexresearch Team
build-type:          Simple
cabal-version:       >=1.10

executable text-normalize-example01
  hs-source-dirs:      src
  ghc-options:         -threaded -O2
  main-is:             Main.hs
  -- other-modules:
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.7      && < 5
    , text
    , text-normalize
